@@ -2,6 +2,7 @@
 Changes in version 0.6.7
 
 - Updated janarate plugin to be more useful in determining ultimate event rates
+- Replaced use of typeof with __typeof__ to appease c++11 compilers
 
 
 Changes in version 0.6.6
